Further upgrades, including Java21 upgrade